# networking-dppx

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  HACKING.rst  README.md  README.rst  setup.cfg  tox.ini
devstack/: local.conf  plugin.sh  settings  setup-veth.sh
devstack/lib/: bmv2.sh
doc/api_samples/: program-create-req.json  program-create-resp.json  program-update-req.json  table-entry-add-req.json
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
etc/oslo-config-generator/: networking-p4.conf
networking_p4/: __init__.py  opts.py
networking_p4/agent/: agent.py
networking_p4/agent/agent_drivers/bmv2/: agent_driver.py
networking_p4/cli/: module.py
networking_p4/db/: models.py  p4_db.py
networking_p4/db/migration/alembic_migrations/: env.py  script.py.mako
networking_p4/db/migration/alembic_migrations/versions/: EXPAND_HEAD  start_networking_p4.py
networking_p4/db/migration/models/: head.py
networking_p4/extensions/: p4.py
networking_p4/services/: driver_manager.py  plugin.py
networking_p4/services/common/: config.py  constants.py  context.py  exceptions.py  rpc_topics.py
networking_p4/services/service_drivers/: driver_api.py
networking_p4/services/service_drivers/default/: driver.py  rpc.py
networking_p4/services/service_drivers/default/services/: abstract.py  attach_module.py  configure_module.py  create_module.py  db_helper.py  delete_module.py  detach_module.py  module_configuration.py  unconfigure_module.py  update_module.py  utils.py
networking_p4/services/validation/: p4_module.py  validation.py
networking_p4/tests/: test_networking_p4.py
releasenotes/source/: conf.py  index.rst
(+7 files in other folders)
