[metadata]
name = networking-p4
summary = API's and implementations to support P4-based Data Plane Programmability in Neutron.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_p4

[entry_points]
neutronclient.extension=
    module = networking_p4.cli.module
neutron.db.alembic_migrations =
    networking-p4 = networking_p4.db.migration:alembic_migrations
neutron.service_plugins =
    p4 = networking_p4.services.plugin:P4Plugin
networking_p4.p4.drivers =
    default = networking_p4.services.service_drivers.default.driver:DefaultP4Driver
neutron.agent.l2.extensions =
    p4 = networking_p4.agent.agent:P4AgentExtension
networking_p4.p4.agent_drivers =
    bmv2 = networking_p4.agent.agent_drivers.bmv2.agent_driver:P4Bmv2AgentDriver
oslo.config.opts =
    networking-p4 = networking_p4.opts:list_p4_opts
    networking-p4.quotas = networking_p4.opts:list_quota_opts

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_p4/locale
domain = networking_p4

[update_catalog]
domain = networking_p4
output_dir = networking_p4/locale
input_file = networking_p4/locale/networking_p4.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_p4/locale/networking_p4.pot
